2009-10-30 Roman
- FIX:UI.VCAEngine: Close page from script is fixed. Cross linking pages call is fixed.
- !!:DAQ: Error code is added to conroller status.
- FIX:Get error for compile new template functions is fixed.


2009-10-29 Roman
- Special.FLibSYS: The function's PID setpoint is made output.
- FIX:UI.VCAEngine: The modify for items check is unified, expanded and some fixed.
- FIX:UI.Vision, UI.WebVison: The logical values trand's display is fixed for no borders set.
- FIX:UI.Vision: Editable mode for primitive protocol at noactive status is fixed.
- FIX:UI.WebVison: Save alpha channel for images of primitive "Diagram" is fixed.


2009-10-26 Roman
- DAQ.DAQGate: Setup parameter's values to EVAL is added on time connection error.
- DAQ.ICP_DAS: Watchdogs support is added.
- FIX:UI.QTCfg: QLabel values display is fixed for HTML values.
- UI.WebCfgD: EVAL display is added for boolean readonly values.


2009-10-23 Roman
- FIX:DAQ.BlockCalc: Block's ordering is fixed.
- DAQ.BlockCalc, DAQ.LogicLev: Independent resource is added for lock writing parameters on time calc.
- DAQ.ICP_DAS: The module I-87057W support is added.
- DAQ.JavaLikeCalc: The dynamic type is added for prevent type casting on compile time.
    Set no write permition to attributes of parameter for Input function's attributes.
- !!:Special.FLibSYS: The function PID is expanded by new parameters: Kd, Tzd and followSp. And parameter Tf is removed.
- UI.Vision, UI.WebVision: The alpha support is added to colors for all primitives.
- UI.Vision, UI.WebVision: Fill view is added to primitive "Diagrama" for boolean values.
- UI.Vision: Send events from Quitance buttons is added. Active mode support of primitive "Protocol" is expanded.


2009-10-19 Roman
- DAQ.LogicLev: Writing to template's context by resourced is added.
- FIX:Special.FLibComplex1: Tf is move only for differential part lag.
- UI.Vision: Into spin form's widgets is reserved place for apply button.